# neural-network-implementation

./: .gitignore  CMakeLists.txt  DrawNeuralNetwork.m  README.md  activation.c  activation.h  adder_implementation.c  boston_implementation.c  boston_test.c  cost.c  cost.h  cost.txt  cost_plot.m  csv.c  csv.h  decision_boundaries.m  gate_implementation.c  helpers.c  helpers.h  housing_test.csv  housing_train.csv  img.mat  main  main.c  main2.c  matrix.c  matrix.h  mnist.c  mnist.h  mnist_implementation.c  params.txt  weights.txt  xor.c  xor.h
Matlab/: DrawNeuralNetwork.m
mainProject/: activation.c
matlab/: DrawNeuralNetwork.asv  DrawNeuralNetwork.m
tests/: orGate.c
verifiers/: verifyDoubler.m  verifyXOR.m
